--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,3 +17,8 @@ kibana:
     - "5601:5601"
   links:
     - elasticsearch
+rabbitmq:
+  image: jcalazan/rabbitmq
+  ports: 
+    - "5672:5672"
+    - "15672:15672"
