added rabbitmq link to logstash; updated logstash.conf

--- a/logstash-conf/logstash.conf
+++ b/logstash-conf/logstash.conf
@@ -1,11 +1,16 @@
 input {
-	tcp {
-		port => 5000
+	rabbitmq {
+		queue => "hooks.hooks"
+		durable => true
+		host => rabbitmq
 	}
 }
 
 ## Add your filters here
 
 output {
+	stdout {
+    	codec => rubydebug
+  	}
 	elasticsearch { }
 }
