rabbit official images

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ kibana:
   links:
     - elasticsearch
 rabbitmq:
-  image: jcalazan/rabbitmq
+  image: rabbitmq:3.5
   ports: 
     - "5672:5672"
     - "15672:15672"
