--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,8 @@ kibana:
     - "5601:5601"
   links:
     - elasticsearch
-rabbitmq:
-  image: rabbitmq:3.5
+rabbitmq: 
+  image: rabbitmq:3.5.4-management
   ports: 
     - "5672:5672"
     - "15672:15672"
