--- a/elasticsearch/Dockerfile
+++ b/elasticsearch/Dockerfile
@@ -1,3 +1,5 @@
 FROM elasticsearch:latest
 
-RUN plugin -i elasticsearch/marvel/latest
+RUN plugin -install elasticsearch/marvel/latest
+RUN plugin -install mobz/elasticsearch-head
+
